<resources>
    <string name="app_name">ioncdialog</string>
    <string name="modify_dialog_title">修改密码</string>
    <string name="modify_password_notice">密码用于保护私钥,强度非常重要;IONCToken不储存密码,也无法帮你找回,请务必牢记</string>
    <string name="current_password">当前密码</string>
    <string name="new_password">新密码</string>
    <string name="new_password_again">再次输入新密码</string>
    <string name="btn_cancel">取 消</string>
    <string name="btn_sure">确 定</string>
    <string name="password_rule">密码格式:数字、大小写字母与特殊符号混合(空白和下划线除外),且长度为8~12位</string>
    <string name="next_to_backup">下一步</string>
    <string name="mnemonic_hint">助记词用于恢复钱包或重置钱包密码,将它准确抄写到纸上,并存放在只有您知道的安全的地方,系统不存储您的助记词</string>
    <string name="btn_sure_text">确定</string>
    <string name="not_now">以后再说</string>
    <string name="dialog_version_info">If you would like to  let the administrators of  this website know that you\'ve seen this page instead of the page you expected, you should send them e-mail. In general, mail sent to the name webmaster and directed to the website\'s domain should reach the appropriate person.</string>
    <string name="btn_close">关闭</string>
    <string name="btn_update">更新</string>
    <string name="v_info">版本信息</string>
    <string name="download_progress_tv">下载进度 %s</string>
</resources>
